# myactuator_rmd

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  package.xml
docs/: error_handling.md
examples/v161_motor/: README.md  main.cc
include/myactuator_rmd/: can_interface.h  motor_registry.h  status_macros.h
include/myactuator_rmd/can/: exceptions.h  frame.h  node.h  utilities.h
include/myactuator_rmd/core/: can_frame.h  can_interface.h
include/myactuator_rmd/protocol/: message_packer.h  motor_actuator.h  motor_configurator.h  motor_status_querier.h  motor_v161.h  packing_v161.h  parsing_v161.h  protocol_v161.h  types_v161.h
include/v161_motor_control/: can_interface.h  can_interface.hpp  motor_v161.h  motor_v161.hpp  packing_v161.h  packing_v161.hpp  parsing_v161.h  parsing_v161.hpp  types_v161.h  types_v161.hpp
myactuator_rmd/include/myactuator_rmd/: version.hpp
myactuator_rmd/include/myactuator_rmd/protocol/: command_type.hpp  requests.hpp
myactuator_rmd/test/: version_test.cpp
myactuator_rmd/test/protocol/: command_type.cpp
src/: can_interface.cc  can_interface.cpp  main.cc  main.cpp  motor_registry.cc  motor_v161.cc  motor_v161.cpp  packing_v161.cc  packing_v161.cpp  parsing_v161.cc  parsing_v161.cpp
src/can/: node.cc  utilities.cc
src/core/: can_interface.cc
src/protocol/: message_packer.cc  motor_actuator.cc  motor_configurator.cc  motor_status_querier.cc  motor_v161.cc  packing_v161.cc  parsing_v161.cc
test/: CMakeLists.txt
test/core/: can_interface_test.cc
test/mocks/: mock_can_interface.h
test/protocol/: message_packer_test.cc
test/unit/: motor_v161_test.cc
tests/: CMakeLists.txt  can_interface_tests.cc  motor_registry_tests.cc  test_main.cc
